# goldfinch

./: Cargo.toml  README.md  SHARED_TASK_NOTES.md
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
src/: aws.rs  cli.rs  commands.rs  main.rs
tests/: cli_tests.rs
