[package]
name = "goldfinch"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.13"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
